--- a/app_wifi/templates/MainVC.html
+++ b/app_wifi/templates/MainVC.html
@@ -24,9 +24,17 @@
                             <div style="margin-top: 40px;margin-left: 20%">送水服务</div>
                         </div>
                         <div class="col" ng-click="takeToUrl('helpercomputerRepair')" style="background-color: #9acfea;height: 100px;">
-                            <div style="margin-top: 40px;margin-left: 20%">终端保修</div>
+                            <div style="margin-top: 40px;margin-left: 20%">终端报修</div>
                         </div>
+                    </div>
 
+                    <div class="row">
+                        <div class="col" ng-click="takeToUrl('helperPropertyRepair')" style="background-color: #245580;height: 100px;">
+                            <div style="margin-top: 40px;margin-left: 20%">物业报修</div>
+                        </div>
+                        <!--<div class="col" ng-click="takeToUrl('helpercomputerRepair')" style="background-color: #9acfea;height: 100px;">-->
+                            <!--<div style="margin-top: 40px;margin-left: 20%">终端报修</div>-->
+                        <!--</div>-->
                     </div>
                 </div>
             </div>
